# parascape

./: .gitignore  .prettierignore  .prettierrc.json  README.md  component-manifest.json  index.html  package.json  schema.sql  svelte.config.js  tsconfig.json  vite.config.ts  vite.lib.config.ts  vitest.browser.config.ts  vitest.config.ts  wrangler.jsonc
__a11y__/: to-validate-a11y.ts
builder/: Builder.pui  README.md  index.html  llm-server.ts  main.ts
components/: Components.pui  Configurator.pui  Examples.pui  catalog.ts  cfg-derive.ts  cfg-hints.ts  cfg-loaders.ts  check-component-manifest.ts  gen-component-manifest.ts  gen-lib-meta.ts  gen-manifests.ts  index.html  main.ts  manifests.json  release-lib.ts
demos/: DemoPane.pui  DemoPane.svelte  Demos.pui  Demos.svelte  ReactMount.svelte  index.html  live-compile.ts  lower-async-block.js  lower-fusion.js  lower-leading-dot.js  lower-leading-dot.ts  lower-match.js  lower-match.ts  lower-pipeline.js  lower-pipeline.ts  main.ts  para-inline-snippets.js  para-inline-snippets.test.mjs  para-inline-snippets.ts  pui-prism.ts  pui-shiki.ts  svelte-internal.d.ts
designer/: Designer.pui  component-meta.ts  github-pr.ts  index.html  main.ts  react-export.ts  sections.ts  templates.ts  theme-tokens.ts
jenkins/: Jenkinsfile  build-linux.sh  build-macos.sh
preview/: index.html  main.ts
scripts/: gen-sibits-manifest.ts  tauri-prep.mjs
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/loading/: index.html
src-tauri/src/: main.rs
(+588 files in other folders)
