[package]
name = "parascape"
version = "0.1.0"
description = "Parascape — Cloudscape in .pui (desktop)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
